# fmr-thesis

./: .gitignore  BLOCKERS.md  DECISIONS.md  Faithful_Medical_Reasoning_Thesis_Proposal_1.md  README.md  RESULTS_LOG.md  vercel.json
fmr/: .gitignore  Dockerfile.backend  README.md  api.py  colab_serve_api.py  pyproject.toml  requirements.txt
fmr/configs/: correction.yaml  data.yaml  experiment.yaml  models.yaml  verifier.yaml
fmr/dashboard/: CLAUDE.md  app.js  data.js  index.html  package-lock.json  package.json  style.css
fmr/docs/: fmr_deep_learning_guide.md  fmr_presentation_slides.md  project_summary.tex  writeup_instance_a.md  writeup_instance_b.md
fmr/notebooks/: colab_faithfulness_lora.ipynb  colab_judge_llm.ipynb  colab_real_pipeline.ipynb  colab_stage4_correction_real.ipynb
fmr/outputs/: ablations.json  abstention_baselines.json  baselines.json  blind_test.json  fmr_records.json  fmr_results.json  full_benchmark.json
fmr/results/: correction_ablation.json  correction_abstention_preview.json  correction_audit_mock.jsonl  correction_audit_prior.jsonl  correction_real_crossmodel.json  correction_real_medgemma.json  correction_real_medgemma_sanity.json  correction_real_qwen25vl3b.json  correction_summary_mock.json  correction_summary_prior.json  faithfulness_lora_ablation.json  faithfulness_lora_distill_set.json  judge_llm_validation.json  judge_validation_heuristic.json  verifier_benchmark.json  verifier_benchmark_real.json  verifier_gbt.pkl  verifier_gbt.pkl.meta.json
fmr/scripts/: _common.py  ablate_correction.py  correction_abstention_preview.py  (+15 more)
(+69 files in other folders)
